--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,23 @@
         const fetchBtn = document.getElementById('fetch-btn')
         const responseText = document.getElementById('response-output')
 
-        fetchBtn.addEventListener('click', () => {
-          responseText.innerText = 'Static Text Replacement'
+        // fetchBtn.addEventListener('click', () => {
+        //   responseText.innerText = 'Static Text Replacement'
+        // })
+
+        fetchBtn.addEventListener('click', async () => {
+          const response = await fetch('/.netlify/functions/hello-world')
+		                            .then(response => response.json())
+          responseText.innerText = response
         })
-      })
+
+        //  fetchBtn.addEventListener('click', async () => {
+        //   const response = await fetch('/.netlify/functions/googleDriveProxy')
+		    //                         .then(response => response.json())
+        //   responseText.innerText = response
+        // })
+      }
+    )
     </script>
   </body>
 </html>
